# cookiecutter-uv

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/tests/: test_foo.py
